--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -74,8 +74,7 @@ input {
 }
 
 .nav-bottom-highlight {
-  /* bottom: 0px;
-  border-bottom: 15px solid #707070; */
+  border-bottom: 3px solid #707070;
 }
 
 .nav-underline {
@@ -83,4 +82,10 @@ input {
   top: 10px;
   left: 10px;
   border-bottom: 100px solid #707070;
+}
+
+.logo-blue {
+  position: relative;
+  bottom: 1rem;
+  left: 0.3rem;
 }
