--- a/src/styles/DropdownMenu.css
+++ b/src/styles/DropdownMenu.css
@@ -1,20 +1,24 @@
+/* When modify any of these rules, 
+add !important to it, 
+or the deploy build won't apply these rules */
+
 .dd-wrapper {
-  position: relative;
-  width: 100%;
-  font-size: 1.2rem;
-  user-select: none;
+  position: relative !important;
+  width: 100% !important;
+  font-size: 1.2rem !important;
+  user-select: none !important;
 }
 .dd-wrapper .dd-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  border: 1px solid #666666;
-  border-radius: 35px;
-  background-color: white;
-  line-height: 38px;
-  cursor: default;
-  cursor: pointer;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  position: relative !important;
+  border: 1px solid #666666 !important;
+  border-radius: 35px !important;
+  background-color: white !important;
+  line-height: 38px !important;
+  cursor: default !important;
+  cursor: pointer !important;
 }
 .dd-wrapper .dd-header span {
   margin-right: 20px;
@@ -39,7 +43,7 @@
   border-bottom-right-radius: 3px;
   box-shadow: 0 2px 5px -1px #e8e8e8;
   background-color: white;
-  font-weight: 400;
+  font-weight: 400 !important;
   text-align: left;
   -webkit-overflow-scrolling: touch;
 }
@@ -53,7 +57,7 @@
   overflow: hidden;
   width: 100%;
   padding: 8px 10px;
-  font-size: 1.2rem;
+  font-size: 1.2rem !important;
   line-height: 1.6rem;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -69,11 +73,11 @@
   color: black;
 }
 .dd-wrapper .dd-list .dd-scroll-list .dd-list-item.selected {
-  background-color: #9e9e9e;
+  background-color: #9e9e9e !important;
   color: white;
 }
 .dd-wrapper .dd-list .dd-scroll-list .dd-list-item:hover {
-  background-color: #9e9e9e;
+  background-color: #9e9e9e !important;
   color: white;
 }
 .dd-wrapper .dd-list .dd-list-search-bar {
